Minor improvements and mostly supporting IE of today - Safari

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="keywords" content="website design,web design,web design portfolio,redesign,video production,nikola tucaković,nikola tucakovic,portfolio,freelance,freelancer">
     <meta name="description" content="Passionate and dedicated web enthusiast's business card, homepage and playground.">
