Put links in different object on Slogan.js, minor fixes to meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
 
     <meta itemprop="name" content="NT - Online Business Card">
     <meta itemprop="description" content="Passionate and dedicated web enthusiast's business card, homepage and playground.">
-    <meta itemprop="image" content="%PUBLIC_URL%/social.png">
+    <meta itemprop="image" content="https://www.ntmedia.me/images/social.png">
 
     <meta property="og:title" content="NT - Online Business Card">
+    <meta property="og:description" content="Passionate and dedicated web enthusiast's business card, homepage and playground.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="//www.ntmedia.me">
-    <meta property="og:image" content=" %PUBLIC_URL%/social.png">
+    <meta property="og:url" content="https://www.ntmedia.me">
+    <meta property="og:image" content="https://www.ntmedia.me/images/social.png">
     <meta property="og:site_name" content="NT - Online Business Card">
     <meta property="fb:admins" content="100001007229523">
 
