--- a/public/index.html
+++ b/public/index.html
@@ -51,13 +51,13 @@
     </noscript>
     <div id="root"></div>
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25647844-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GTAG%"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments)};
       gtag('js', new Date());
 
-      gtag('config', 'UA-25647844-1');
+      gtag('config', '%REACT_APP_GTAG%');
     </script>
   </body>
 </html>
