--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <meta name="theme-color" content="#b0bac0">
 
     <title>NT - Online Business Card</title>
+    <style>.app{display:none;}</style>
   </head>
   <body>
     <noscript>
