Adjust theme styles; Drop support for IE11; Remove Instagram and Skype accounts

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
     <meta name="google-site-verification" content="OlExvr-wLokrDOtrmoSfHFDl3agLIcY8S6FgodODdzU">
 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/favicon/apple-touch-icon-57x57.png">
